--- a/.gitignore
+++ b/.gitignore
@@ -104,12 +104,14 @@ celerybeat.pid
 # Environments
 .env
 .venv
+.venv-3-7
 env/
 venv/
+venv-3-7/
 ENV/
 env.bak/
 venv.bak/
-
+venv-3-7/
 # Spyder project settings
 .spyderproject
 .spyproject
